# access_guard

./: README.md  pyproject.toml
src/access_guard/: __init__.py
src/access_guard/adapters/: __init__.py  adapter_params.py  factory.py  pa_type.py  permission_adapter_abc.py
src/access_guard/adapters/casbin/: __init__.py  casbin_adapter_abc.py  casbin_adapter_factory.py  casbin_adapter_params.py  casbin_database_adapter.py  casbin_permissions.py  casbin_remote_adapter.py
src/access_guard/adapters/casbin/config/: rbac_model.conf
src/access_guard/adapters/casbin/domain/: adapter_type.py
src/access_guard/authz/: __init__.py  exceptions.py  factory.py  load_policy_result.py  permissions_enforcer.py  permissions_enforcer_params.py  policy_api_loader.py  policy_db_loader.py  policy_db_loader_old.py  policy_loader_abc.py  policy_loader_factory.py
src/access_guard/authz/config/: rbac_model.conf
src/access_guard/authz/loaders/: casbin_policy_provider.py  multi_adapter.py  poicy_query_provider.py  policy_api_loader.py  policy_code_loader.py  policy_db_loader.py  policy_loader_factory.py  policy_provider_abc.py  policy_synthetic_loader.py
src/access_guard/authz/models/: casbin_policy.py  entities.py  enums.py  load_policy_result.py
src/access_guard/utils/: __init__.py
